--- a/up5k_blink/README
+++ b/up5k_blink/README
@@ -1,2 +1,1 @@
-Simple RGB LED demo for UP5K boards, such as the Lattice "iCE40 UltraPlus Breakout Board" and
-the Lattice "iCE40 UltraPlus Mobile Development Platform".
+Simple LED demo for UP5K boards
